# bike-demand-uncertainty

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: full.yaml  smoke.yaml
data/: README.md
docs/: data_card.md  limitations.md  methodology.md  model_card.md  project_spec.md
docs/adr/: 0001-temporal-conformal-design.md
reports/: final_report.md
reports/metrics/: run_metadata.json  summary.json
reports/tables/: per_hour_metrics.csv  predictions.csv
scripts/: download_data.py  reproduce.py
src/bike_demand_forecast/: __init__.py  cli.py  config.py  conformal.py  data.py  features.py  metrics.py  models.py  pipeline.py  reporting.py  split.py
tests/: test_cli.py  test_config.py  test_conformal.py  test_data.py  test_features.py  test_metrics.py  test_models.py  test_pipeline.py  test_split.py
