[project]
name = "bike-demand-forecast"
version = "0.1.0"
description = "Day-ahead hourly bike rental demand forecast with calibrated 90% split-conformal uncertainty intervals using UCI Bike Sharing data."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.14",
    "scikit-learn>=1.4",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.6",
]

[project.scripts]
bike-demand-forecast = "bike_demand_forecast.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
skips = ["B101", "B301"]
